--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container{
+  width: 1000px;
+  margin: auto;
+  display: flex;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.albums{
+  width: 600px;
+}
+.albums ul li {
+  list-style: none;
+  padding: 10px 0;
+  font-size: 20px;
+} 
+.albums ul li:hover {
+  background-color: aliceblue;
+  cursor: pointer;
+}
+.photo{
+  position: relative;
+  
+}
+.img {
+  width: 300px;
+  height: 300px;
+  position: fixed;
+  top: 10%;
+  border: 5px double rgb(187, 197, 43);
+}
+.no-select-album{
+  align-items: center;
+  margin-top: 10%;
+  font-size: 25px;
+  font-weight: bold;
+  
 }
