--- a/src/index.css
+++ b/src/index.css
@@ -5,39 +5,54 @@
 }
 .albums{
   width: 600px;
+  background-color: rgb(247, 255, 255);
+  
+}
+.albums ul {
+  margin-right: 50px;
 }
 .albums ul li {
+  flex: 1;
   list-style: none;
   padding: 10px 0;
   font-size: 20px;
+  border-bottom: 1px solid #000;
 } 
+.selectOn {
+  background-color: rgb(212, 233, 233);
+}
 .albums ul li:hover {
-  background-color: aliceblue;
+  background-color:  rgb(227, 240, 240);
   cursor: pointer;
 }
 .photo{
   position: relative;
-  
+  flex: 1;
+}
+.photos{
+  background-color: azure;
 }
 .img {
   width: 300px;
   height: 300px;
   position: fixed;
   top: 10%;
-  border: 5px double rgb(187, 197, 43);
+  border: 10px double black;
+  margin-left: 40px;
 }
 .no-select-album{
+  flex: 1;
+  text-align: center;
   align-items: center;
   margin-top: 10%;
   font-size: 25px;
   font-weight: bold;
   
 }
-.album{
-  display: flex;
-}
+
 .btn {
   height: 20px;
   align-self: center;
-  margin: 0 5px;
+  margin: 5px;
+  
 }
